# Renderer

./: .gitignore  CMakeLists.txt  README.md
include/: Color.hpp  Shader.hpp  Texture2D.hpp  TileMap.hpp
include/Geometry/: FastMath.hpp  FastSinCos.hpp  Rect.hpp  Transform2D.hpp  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vertex2D.hpp
include/Graphics/: Animator.hpp  Image.hpp  Renderer.hpp  Shader.hpp  Sprite.hpp  Texture2D.hpp  TileMap.hpp  Transform2D.hpp  Vertex2D.hpp  Vertex3D.hpp
include/Graphics/2D/: Animator2D.hpp  Sprite2D.hpp  Vertex2D.hpp
include/Graphics/3D/: Transform3D.hpp
include/Loaders/: AssetLoader.hpp  AssetManager.hpp  TileMap.hpp
include/Managers/: Animation2DManager.hpp  AnimationManager.hpp  AssetManager.hpp  SpriteManager.hpp  TileMapManager.hpp
include/Managers/Base/: Manager.hpp
include/Utils/: Defines.hpp  Files.hpp  Geometry.hpp  Math.hpp  Rect.hpp  Rect.inl  Structures.hpp
include/World/: TileMap.hpp
include/extmath/: Cuboid.hpp  Cuboid.inl  ExtMath.hpp  Rect.hpp  Rect.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl
res/animations/: anim_cyclop.xml  anim_megaman.xml
res/levels/: Atreides8.tmx  Dune.tmx  Map1.tmx  TestMap.tmx  test.tmx
res/shaders/: Sprite.frag  Sprite.vert  shader.frag  sprite.frag  sprite.vert  tilemap.frag  tilemap.vert
src/: Color.cpp  Shader.cpp  Texture2D.cpp  TileMap.cpp  main.cpp
src/Geometry/: FastMath.cpp  FastSinCos.cpp  Transform2D.cpp
src/Graphics/: Animation.cpp  Animation.hpp  Animator.cpp  Color.cpp  Color.hpp  Image.cpp  Image.hpp  Renderer.cpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite2D.cpp  Sprite2D.hpp  Texture2D.cpp  Texture2D.hpp  TileMap.cpp  TiledMap.hpp  Transform2D.cpp  Vertex2D.hpp
src/Graphics/2D/: Animator2D.cpp  Sprite2D.cpp  Texture2D.cpp  TileMap.cpp  Transform2D.cpp
src/Graphics/3D/: Transform3D.cpp
src/Graphics/Primitives/: Sprite.cpp
src/Loaders/: AssetLoader.cpp  AssetManager.cpp  TileMap.cpp
src/Managers/: Animation2DManager.cpp  AnimationManager.cpp  AssetManager.cpp  AssetManager.hpp  SpriteManager.cpp  SpriteManager.hpp  TileMapManager.cpp  TiledMapManager.cpp  TiledMapManager.hpp
src/Utils/: Files.cpp  Geometry.cpp
src/World/: TileMap.cpp
src/controllers/: Animator.cpp  Animator.hpp
src/extmath/: ExtMath.cpp
src/system/: Defines.hpp  FileProvider.cpp  FileProvider.hpp  NonCopyable.hpp
